# ExNihiloBedrock

./: .gitignore  CMakeLists.txt  ExNihiloBedrock.filters  ExNihiloBedrock.sln  ExNihiloBedrock.vcxproj  ExNihiloBedrock.vcxproj.filters  README.md
assets/: blocks.json  manifest.json
assets/texts/: en_US.lang  pt_BR.lang  zh_CN.lang
assets/textures/: flipbook_textures.json  item_texture.json  terrain_texture.json
assets/textures/items/: oreChunk.tga
data/entities/: pebble.json
data/recipes/: bone_crook.json  cobblestone_from_pebble.json  diamond_hammer.json  doll_from_emerald.json  furnace_silkworm.json  gold_hammer.json  iron_hammer.json  wood_crook.json  wood_hammer.json
include/minecraft/: AABB.h  Actor.h  ActorDefinitionIdentifier.h  ActorFactory.h  ActorMapping.h  ActorRenderDispatcher.h  ActorRenderer.h  Block.h  BlockGraphics.h  BlockItem.h  BlockLegacy.h  BlockPos.h  BlockSourceListener.h  BlockState.h  BlockTypeRegistry.h  Color.h  CommonTypes.h  CompoundTag.h  CreativeItemCategory.h  HeavyBlock.h  HitResult.h  Item.h  ItemDescriptor.h  ItemHelper.h  ItemRegistry.h  ItemStack.h  Level.h  LevelEvent.h  Material.h  Mob.h  Player.h  ProjectileComponent.h  ProjectileFactory.h  Random.h  SaplingType.h  SharedPtr.h  StringHash.h  SynchedActorData.h  TextureUVCoordinateSet.h  Util.h  (+8 more)
include/minecraft/actor/: Actor.h  ActorCategory.h  ActorClassTree.h  ActorDefinitionIdentifier.h  ActorFactory.h  ActorMapping.h  ActorRegistry.h  ActorTerrainInterlockData.h  ActorType.h  ActorUniqueID.h  Attributes.h  Mob.h  MobEffect.h  MobEffectInstance.h  Monster.h  MovementInterpolator.h  OnHitSubcomponent.h  (+7 more)
maps/: SymbolMap.json
resources/assets/: blocks.json
resources/data/: manifest.json
source/: ExNihiloBedrock.cpp  ExNihiloBedrock.h  SymbolMap.json  init.asm  main.cpp  main.h  modinfo.json  process_headers.py
source/blockactors/: BlockActorInfestedLeaves.cpp  BlockActorInfestedLeaves.h  BlockActorInfestingLeaves.cpp  BlockActorInfestingLeaves.h  BlockActorRegistry.h  InfestingLeavesRenderer.cpp  InfestingLeavesRenderer.h
source/blocks/: BlockBarrel.cpp  BlockBarrel.h  BlockBarrelRenderer.cpp  BlockBarrelRenderer.h  BlockBaseFalling.cpp  BlockBaseFalling.h  BlockFluidWitchWaterFlowing.cpp  BlockFluidWitchWaterFlowing.h  BlockFluidWitchWaterStill.cpp  BlockFluidWitchWaterStill.h  BlockInfestedLeaves.cpp  BlockInfestedLeaves.h  BlockInfestingLeaves.cpp  BlockInfestingLeaves.h  BlockRegistry.h  BlockTessellatorRegistry.h  ENBlocks.cpp  ENBlocks.h  FluidRegistry.h
source/entities/: DropItemSubcomponent.h  ENEntities.cpp  ENEntities.h  PebbleRenderer.cpp  PebbleRenderer.h  ProjectileStone.cpp  ProjectileStone.h
source/handlers/: HandlerCrook.cpp  HandlerCrook.h  HandlerHammer.cpp  HandlerHammer.h
source/items/: ENItems.cpp  ENItems.h  ItemCookedSilkworm.cpp  ItemCookedSilkworm.h  ItemDoll.cpp  ItemDoll.h  ItemPebble.cpp  ItemPebble.h  ItemResource.cpp  ItemResource.h  UniversalBucket.cpp  UniversalBucket.h
source/registries/: CrookRegistry.cpp  CrookRegistry.h  HammerRegistry.cpp  HammerRegistry.h  HammerReward.h  OreRegistry.cpp  OreRegistry.h
source/util/: BlockInfo.cpp  BlockInfo.h  ItemInfo.cpp  ItemInfo.h  StringUtils.cpp  StringUtils.h
tools/: process_headers.py
(+139 files in other folders)
